replaced Range with Padding in pricing badge and fixed badge overflow issue

--- a/assets/reactjs/src/blocks/pricing/style.scss
+++ b/assets/reactjs/src/blocks/pricing/style.scss
@@ -1,6 +1,6 @@
 .qubely-block-pricing { 
 	transition: 400ms;
-
+	position:relative;
     .qubely-list {
         list-style: none;
         padding: 0;
